# opengl

./: .gitignore  CMakeLists.txt  README.md
includes/glad/: glad.h
lib/glad/: glad.c  glad.h
lib/imgui/: CMakeLists.txt
res/: 1.frag  1.vert  block.frag  block.vert  colored.frag  colored.vert
src/: Array3D.hpp  BlockType.hpp  Chunk.hpp  ChunkGenenerator.hpp  ChunkGenerator.hpp  ChunkManager.hpp  ChunkMeshGenerator.hpp  CubeMesh.cpp  CubeMesh.hpp  CubeVertexAttribs.hpp  Face.hpp  glad.c  main.cpp  myAssert.h  myAssert.hpp
src/Renderer/: GLDebugCallBack.h  Renderer.cpp  Shader.cpp  Shader.h  Texture.h  VertexArray.h  VertexAttributes.h  VertexBufferLayout.cpp  VertexBufferLayout.h  Window.cpp  WindowInitilizer.cpp  WindowInitilizer.h
src/renderer/: Buffer.h  Buffer.hpp  Camera.cpp  Camera.h  Camera.hpp  GLDebugCallBack.h  IndexBuffer.h  Mesh.cpp  Mesh.h  Mesh.hpp  Renderer.cpp  Renderer.h  Renderer.hpp  Shader.cpp  Shader.h  Shader.hpp  Texture.cpp  Texture.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h  VertexBufferLayout.hpp  Window.cpp  Window.h  Window.hpp
src/renderer/Meshes/: Cube.h  Cube.hpp
test/: CMakeLists.txt  Test1.cpp
